add dto and update docker files
